@@ -1,3 +1,12 @@
+2011-12-07  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (top): Require 'cl.
+	(tramp-enter-password): Remove it.  Move implementation ...
+	(tramp-action-password): ... here.
+	(tramp-make-tramp-temp-file, tramp-read-passwd)
+	(tramp-clear-passwd, tramp-time-less-p, tramp-time-diff): Set
+	tramp-autoload cookie.
+
 2011-12-02  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-maybe-open-connection): Handle user
